<resources>
    <string name="app_name" translatable="false">Tasks</string>
    <string name="user_icon">Current user</string>
    <string name="homepage_tabs">Homepage tabs</string>
    <string name="add_task">Add task</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_active_tasks">All done!\nThere aren\'t any uncompleted tasks.</string>
    <string name="current_tasks_list">Select current tasks list</string>
    <string name="no_completed_tasks">Empty!\nThere aren\'t any completed tasks.</string>
    <string name="toolbar_title">Tasks</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="hint_title">Task title</string>
    <string name="hint_description">Add description</string>
    <string name="mark_important">Mark as important</string>
    <string name="sw_repeat">Repeat</string>
    <string name="set_date_time">Set date/time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="mark_completed">Mark completed</string>
    <string name="mark_uncompleted">Mark uncompleted</string>
    <string name="my_tasks">My tasks</string>
    <string name="select_a_list">Select a list</string>
    <string name="list_action">List action</string>
    <string name="button_done">Done</string>
    <string name="enter_list_title">Enter list title</string>
    <string name="important">Important</string>
    <string name="completed">Completed</string>
    <string name="select_date">Select date</string>
    <string name="repeat_frequency">Repeat frequency</string>
    <string name="dont_repeat">None</string>
    <string name="default_task_title">Untitled</string>
    <string name="set_time">Set time</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="date_tomorrow">Tomorrow</string>
    <string name="date_day_after_tomorrow">Day after tomorrow</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_completed_tasks">Delete all completed tasks</string>
    <string name="delete_dialog_title">Delete completed tasks?</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_positive_button">OK</string>
    <string name="delete_dialog_message">All completed tasks in current list will be permanently delete.</string>
    <string name="delete_list_dialog_title">Delete current list?</string>
    <string name="delete_list_dialog_message">This list and all related tasks will be delete permanently.</string>
    <string name="create_new_list">Create new list</string>
    <string name="notification_permission_require_message">Whenever you change your mind, you can turn on notifications for this app by going to <b>System settings > Notifications > App settings</b>.</string>
    <string name="notification_permission_require_title">Permission denied!</string>
    <string name="please_wait">Please wait..</string>
    <string name="sign_in_required">Please sign in to continue</string>
    <string name="signing_in">Signing in as %s</string>
    <string name="task_due_datetime">Task datetime</string>
    <string name="request_permission_dialog_title">Turn on notifications!</string>
    <string name="request_permission_dialog_desc"><b>Tasks</b> needs notifications permission to be turned on to notify you when it\'s time to do your tasks.</string>
    <string name="skip">Skip</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="manage_google_account">Manage your Google Account</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="close">Close</string>
    <string name="send_feedback">Send feedback</string>
    <string name="button_send">Send</string>
    <string name="feedback_sent">Feedback sent!</string>
    <string name="fields_empty">Please fill in all fields!</string>
    <string name="add_a_title">Enter title</string>
    <string name="add_details">Add details</string>
    <string name="default_list_name">New list</string>
    <string name="remider_content_text">Tap to see your upcoming tasks</string>
    <string name="reminder_content_title">You have %d task(s) to do tomorrow!</string>
    <string name="reminder_content_title_no_tasks">You don\'t have any tasks tomorrow!</string>
    <string name="reminder_channel_name">Reminder</string>
    <string name="main_channel_name">Main channel</string>
    <string name="background_service_channel_name">Background service</string>
    <string name="tasks_scheduler">Tasks scheduler</string>
    <string name="similar_date_time_message">There is one or more tasks have similar date time with the one you picked, do you want to save the current task?</string>
</resources>